fix maptype doesn't use the frameless injection properly